modify :game assets